--- a/resources/default.env
+++ b/resources/default.env
@@ -2,4 +2,5 @@
 {:dl-url-format "http://www.pacificaindex.com/policelogs/PPDdailymediabulletin%s.pdf"
  :geocoding-url "http://maps.googleapis.com/maps/api/geocode/json"
  :db-filename "/tmp/incidents.db"
+ :log-filename "/tmp/wtf.log"
  }
